# AIRA-Virtual-receptionist

./: PROJECT_SPECIFICATION.md  REQUEST_FLOW_EXAMPLES.md  mailmap.txt  package.json  pnpm-lock.yaml
apps/client/src/app/: page.tsx
apps/client/src/components/: CameraStream.tsx  VoiceActivityDetector.tsx
apps/client/src/contexts/: WebSocketContext.tsx
apps/client/src/hooks/: useFaceVerification.ts  usePresenceDetection.ts
apps/dashboard/: index.html  package-lock.json  package.json
apps/dashboard/src/: App.tsx  api.ts  index.css
apps/dashboard/src/components/: StatsGrid.tsx  VisitorDetailsModal.tsx
apps/server/: .gitignore  check_slack.py  cursor_fix_prompt.md  implementation_plansss  main.py  pyproject.toml  task.md  test_slack.py  walkthrough.md
apps/server/core/: lifespan.py
apps/server/models/: groq_processor.py  whisper_processor.py
apps/server/receptionist/: __init__.py  cleanup_old_visitors.py  database.py  migrate_add_slack_columns.py  models.py  seed_data.py
apps/server/routes/: dashboard_routes.py  slack_webhook_receiver.py  websocket_routes.py
apps/server/services/: calendar_service.py  face_recognition_service.py  notification_service.py  notify_slack.py  person_detection_service.py  processor_service.py  query_router.py  slack_reply_poller.py  slack_reply_store.py  slack_webhook_receiver.py  sync_slack_dm_channels.py  vision_service.py  wake_word_service.py
