[project]
name = "talkmateai-server"
version = "0.1.0"
description = "TalkMateAI server application"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    # Explicitly pin BOTH to the matching stable CUDA versions!
    "torch==2.5.1+cu124",
    "torchaudio==2.5.1+cu124",
    # From requirements.txt
    "sqlalchemy>=2.0.0",
    "soundfile==0.13.1",
    "scipy==1.15.2",
    "backoff==2.2.1",
    "peft==0.13.2",
    "wheel",
    "packaging",
    "kokoro",
    "requests",
    "websockets",
    "pip>=25.1.1",
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.34.3",
    "groq>=0.31.0",
    "faster-whisper>=1.2.1",
    "black>=25.1.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "openwakeword",
    "silero-vad",
    "deepface>=0.0.93",
    "tf-keras",                       # Required for newer DeepFace/TF compatibility
    "python-dotenv",                  # For load_dotenv()
    "mtcnn",                          # Required for FACE_VERIFY_DETECTOR=mtcnn
    "tensorflow==2.16.2",             # Windows-compatible; does NOT pull in tensorflow-io-gcs-filesystem
    "opencv-python-headless",         # Safer for server environments (avoids libGL errors)
    "mediapipe==0.10.14",             # Face detection for presence-based activation
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
]

[tool.uv]
# PyTorch CUDA index for GPU support
extra-index-url = [
    "https://download.pytorch.org/whl/cu124"
]
index-strategy = "unsafe-best-match"

# Hard-exclude tensorflow-io-gcs-filesystem on Windows.
# It has no win_amd64 wheels and tensorflow 2.16+ doesn't need it anyway.
override-dependencies = [
    "tensorflow-io-gcs-filesystem; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "README.md",
]